# achtung

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  config.toml  createDatabase.py  game.ui  menu.gui  vcpkg-deps.txt
.github/workflows/: main.yml
include/: Application.hpp  CMakeDefine.hpp  CMakeDefine.hpp.in  CMakeLists.txt  Global.hpp  IGameState.hpp  Log.hpp  Logger.hpp  SettingsHandler.hpp  SettingsManager.hpp  StateSettings.hpp  Texture.hpp  Utils.hpp
include/Game/: Collisions.hpp  PlayerThing.hpp  StateGame.hpp  StateSandbox.hpp  Thing.hpp  TrailThing.hpp
include/app/: Application.hpp  AssetManager.hpp  CMakeDefine.hpp.in  CMakeLists.txt  ConfigManager.hpp  IGameState.hpp  Log.hpp  ProfileManager.hpp  ResourceManager.hpp  SQLite.hpp  Utils.hpp
include/engine/: BorderThing.hpp  Effect.hpp  Engine.hpp  EngineTestable.hpp  InputSequence.hpp  PickMeUp.hpp  Player.hpp  Timer.hpp  TimerService.hpp
include/framework/: Observer.hpp
include/game/: BorderThing.hpp  Effect.hpp  Engine.hpp  PickMeUp.hpp  Player.hpp  PlayerThing.hpp  PowerupThing.hpp  StateGame.hpp  StateSandbox.hpp  Timer.hpp  TimerService.hpp  TrailThing.hpp
include/menu/: Button.hpp  LobbyPanel.hpp  Panel.hpp  ProfilePanel.hpp  SettingsPanel.hpp  StateMenu.hpp
include/sql/: Connection.hpp  Statement.hpp
res/: lobby.ui
res/ui/: game  lobby  menu  playerEntry  profileEntry  profilePanel  scoresEntry  settingsPanel
src/: Application.cpp  BaseGameState.cpp  CMakeLists.txt  CTexture.cpp  Global.cpp  Log.cpp  Logger.cpp  Main.cpp  PlayerThing.cpp  SettingsHandler.cpp  SettingsManager.cpp  StateSettings.cpp  StateTest.cpp  Texture.cpp  Thing.cpp  TrailThing.cpp  Utils.cpp
src/app/: Application.cpp  AssetManager.cpp  CMakeLists.txt  ConfigManager.cpp  ProfileManager.cpp  ResourceManager.cpp  SQLite.cpp  SettingsManager.cpp  Utils.cpp
src/engine/: BorderThing.cpp  CMakeLists.txt  Engine.cpp  EngineTestable.cpp  InputSequence.cpp  PickMeUp.cpp  Player.cpp  TimerService.cpp  TrailThing.cpp
src/game/: BorderThing.cpp  CMakeLists.txt  Collisions.cpp  Engine.cpp  PickMeUp.cpp  Player.cpp  PlayerThing.cpp  PowerupThing.cpp  StateGame.cpp  StateSandbox.cpp  Thing.cpp  TimerService.cpp  TrailThing.cpp
src/game/inc/: Collisions.h  PlayerThing.h  StateGame.h  StateSandbox.h  StateTest.h  Thing.h  TrailThing.h
src/inc/: BaseGameState.h  CMakeLists.txt  CTexture.h  Global.h  Logger.h  PlayerThing.h  SettingsHandler.h  StateSettings.h  StateTest.h  Texture.h  Thing.h  TrailThing.h
src/menu/: Button.cpp  CMakeLists.txt  LobbyPanel.cpp  ProfilePanel.cpp  SettingsPanel.cpp  StateMenu.cpp
src/sql/: CMakeLists.txt  Connection.cpp  Statement.cpp
test/: CMakeLists.txt  CollisionDetectionTests.cpp  EngineTest.cpp  EngineTestParams.cpp  EngineTestParams.hpp  EngineTests.cpp
test/mock/: AssetManager.hpp
test/preview_test/: CMakeLists.txt  Main.cpp  StateViewer.cpp  StateViewer.hpp
test/testable/: CMakeLists.txt  EngineTestable.cpp  EngineTestable.hpp  InputSequence.cpp  PlayerTestable.hpp
test/testcase_preview/: CMakeLists.txt  Main.cpp  StateViewer.cpp  StateViewer.hpp
tests/: CMakeLists.txt  CollisionDetectionTests.cpp  DummyTests.cpp
